app/static/css/clo.css
:root {
  --card-white: #ffffeb;
  --card-blue: #d4edff;
  --card-black: #d6cbd6;
  --card-red: #fec8c8;
  --card-green: #e9ffd4;
  --card-gold: #fcf8a9;
  --card-colorless: #e9e7eb;
  --card-land: #ffe0c0;

  --table-header: #f8f9fa;
}

body {
  margin-bottom: 200px;
}

.white {
  background-color: var(--card-white);
}

.blue {
  background-color: var(--card-blue);
}

.black {
  background-color: var(--card-black);
}

.red {
  background-color: var(--card-red);
}

.green {
  background-color: var(--card-green);
}

.gold {
  background-color: var(--card-gold);
}

.colorless {
  background-color: var(--card-colorless);
}

.land {
  background-color: var(--card-land);
}

.text-s {
  font-size: .8rem!important;
}

.text-xs {
  font-size: .6rem!important;
}

.d-none {
  display: none!important;
}

.framed {
  background-color: var(--light);
  border: 1px solid #dee2e6!important;
  border-color: var(--secondary);
  border-radius: .25rem;
  padding: .5rem!important;
  margin-top: .5rem!important;
  margin-left: .5rem!important;
}

.framed-inner {
  background-color: var(--light);
  border: 1px solid #dee2e6!important;
  border-color: var(--secondary);
  border-radius: .25rem;
  padding: .5rem!important;
  margin-top: .5rem;
}

.inner-frames {
  padding-left: .5rem!important;
  padding-right: 0;
  margin-right: 0;
}

.card-frame {
  margin: .25rem!important;
  max-width: 220px;
  font-size: .8rem;
}

.card-table {
  min-width: 1000px;
}

.card-table .col {
  padding: 2px;
}

.add-scar-btn {
  font-size: .8rem;
}

.deckbuilder-col {
  box-sizing: border-box;
  min-width: 12.5%!important;
  max-width: 12.5%!important;
  padding: 2px;
}

.deckbuilder-col-header {
  font-size: .6rem;
  margin: 0;
  padding: 0;
}

.table-column {
  max-width: 12.5%!important;
}

.table-column-header {
  text-align: center;
}

.table-section {
  border: 1px solid;
  border-color: var(--dark);
  margin-top: 4px;
}

.table-section p {
  list-style-type: none;
  margin: 0 4px;
  padding: 0;
}

.table-section-header {
  text-align: center;
  background-color: var(--table-header);
}

.table-section-divider {
  border-top: 1px solid;
  border-color: var(--secondary);
}

.sortable-highlight {
  border: 1px solid blue;
  background-color: lightblue;
}

.card-list {
  margin: 0;
  padding: 0;
}

.card-list.sortable {
  min-height: .2rem;
}

.card-list-item {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: .8rem;
  margin-left: .25rem;
  margin-bottom: 0;
}

.card-list-item a {
  color: inherit;
  text-decoration: inherit;
}

#autocardPopup {
  width: 15rem;
  position: absolute;
}

#autocardPopup img {
  width: 15rem;
}

#autocardPopup.double-width {
  width: 30rem;
}

.card-list-divider {
  display: flex;
  align-items: center;
  justify-content: center;
}

.card-list-divider p {
  font-size: .6rem;
  margin: 0;
}

.bar {
  height: 1px;
  width: 100%;
  background-color: gray;
  display: inline-block;
  margin: 0 2px;
  padding: 0;
  flex-grow: 1;
}

.short-bar {
  height: 1px;
  width: 20%;
  background-color: gray;
  display: inline-block;
  margin: 0 2px;
  padding: 0;
}

.tiny-dot {
  height: 2px;
  width: 2px;
  background-color: black;
  border-radius: 50%;
  display: inline-block;
  margin: 0 2px;
  padding: 0;
  flex-shrink: 0;
}

.small-dot {
  height: 3px;
  width: 3px;
  background-color: black;
  border-radius: 50%;
  display: inline-block;
  margin: 0 2px;
  padding: 0;
  flex-shrink: 0;
}

.faction p {
  margin: 0;
  padding: 0;
}

.faction-header {
  margin-top: .5rem!important;
  border-bottom: 1px solid var(--gray);
  color: var(--gray);
}

.faction-name {
  font-weight: bold;
}

.faction-desc {
  font-size: .8rem;
  font-style: italic;
  color: var(--cyan);
}

.faction-age {
  font-size: .8rem;
  color: var(--gray);
  margin-left: 4px!important;
}

.faction-edit-button {
  float: right;
}

#edit-monikers {
  float: right;
  margin: .5rem;
}

